
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_long ;
struct hostent {scalar_t__ h_addr; } ;


 int exit (int) ;
 int fprintf (int ,char*,char*) ;
 struct hostent* gethostbyname (char*) ;
 int stderr ;

u_long lookup(char *hostname)
{
    struct hostent *hp;

    if ((hp = gethostbyname(hostname)) == ((void*)0)) {
       fprintf(stderr, "Could not resolve %s.\n", hostname);
       exit(-3);
    }

    return *(u_long *)hp->h_addr;
}
